# ainfinity

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .skyignore  .skypilot_jobs.json  Dockerfile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: python-format-check.yml
ainfinity/: config.py  main.py
ainfinity/api/: __init__.py  app.py  dependencies.py
ainfinity/api/v1/: __init__.py
ainfinity/app/: main.py
ainfinity/core/: data_collator.py  dataset.py  finetune.py  helper.py
ainfinity/exceptions/: __init__.py  base.py  handlers.py
ainfinity/infrastructure/: __init__.py  registry.py  sky_wrapper.py
ainfinity/middleware/: __init__.py  auth.py  cors.py  logging.py  rate_limit.py
ainfinity/schema/: training_job.py
ainfinity/schemas/: __init__.py  schemas.py
ainfinity/services/: __init__.py  training_service.py
ainfinity/skylaunch/: deepspeed.yaml
ainfinity/train/: README.md  app.py  finetune.py  helper.py  monitoring.py  schemas.py  sky.yaml  standard.md  train.py
ainfinity/utils/: __init__.py  config.py  constants.py  logging.py  utils.py
deployment/docker/: .dockerignore  Dockerfile  README.md  requirements.txt
deployment/templates/: serve_sky.j2  train_sky.j2
docs/: ARCHITECTURE.md  CORE_MODULE.md  FINAL_STRUCTURE.md  PROJECT_STRUCTURE.md  SERVING_ARCHITECTURE.md
examples/: compare_collators.py  compare_padding_false.py  data_collator_example.py  training_client.py
skypilot_serving/: automate_serving.sh  main.py  serving.yaml
tests/: run_chat_template.py  test_data_collator.py
(+45 files in other folders)
